<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon1"
    tools:context=".presentation.fragments.SettingFragment">

    <Button
        android:id="@+id/btExit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#cb9ca1"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/exit"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <RadioButton
            android:id="@+id/rdNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/level_normal"
            android:textColor="#cb9ca1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:fontFamily="@font/black_ops_one" />

        <RadioButton
            android:id="@+id/rdHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/level_hard"
            android:textColor="#cb9ca1"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="330dp"
        android:src="@drawable/settings_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/black_ops_one"
        android:gravity="center"
        android:text="@string/level"
        android:textColor="#cb9ca1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

</androidx.constraintlayout.widget.ConstraintLayout>