<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon1"
    tools:context=".presentation.fragments.GameMenuFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/wt"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501">

        <Button
            android:id="@+id/btGame"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:backgroundTint="#cb9ca1"
            android:drawableEnd="@drawable/start_game"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/game"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/btRecord"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#cb9ca1"
            android:drawableEnd="@drawable/record"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/record"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/btSetting"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#cb9ca1"
            android:drawableEnd="@drawable/settings"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/setting"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="30dp" />


        <Button
            android:id="@+id/btInstructions"
            android:layout_width="175dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#cb9ca1"
            android:drawableEnd="@drawable/instructions"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/instructions"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="30dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>